test/src/e2e_vm_tests/test_programs/should_pass/forc/workspace_building/test_lib/src/lib.sw
library test_lib;

// anything `pub` here will be exported as a part of this library's API
pub const NUMBER: u64 = 10;
