test/src/e2e_vm_tests/test_programs/should_fail/cyclic_dependency/dependency_b/src/lib.sw
library dependency_b;

// anything `pub` here will be exported as a part of this library's API
